--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+# ???? ?? ??
 spring.application.name=devlog-api
+server.port=8080
+
+# ?????? ?? (H2 ??)
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# JWT ??
+jwt.secret=YOUR_32_CHAR_SECRET_KEY_123456789012345
+jwt.access-token-expiration=900000          # 15? (??? ??)
+jwt.refresh-token-expiration=1209600000     # 14? (??? ??)
+
+# Redis ??
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
