--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,21 @@
-# ???? ?? ??
+# ===================== App Default Setting=====================
 spring.application.name=devlog-api
 server.port=8080
 
-# ?????? ?? (H2 ??)
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# ===================== DB Setting =====================
+# Docker ????? docker-compose?? ENV? ??
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:h2:mem:testdb}
+spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER:org.h2.Driver}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:sa}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# JWT ??
-jwt.secret=YlCj8tnXzJmZ6cHdSKnFQHo0z9XtVc6wDN0dGHYFyqY=
-jwt.access-token-expiration=900000
-jwt.refresh-token-expiration=1209600000
+# ===================== Redis Setting =====================
+spring.data.redis.host=${SPRING_REDIS_HOST:localhost}
+spring.data.redis.port=${SPRING_REDIS_PORT:6379}
 
-# Redis ??
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
+# ===================== JWT Setting =====================
+jwt.secret=${JWT_SECRET:YlCj8tnXzJmZ6cHdSKnFQHo0z9XtVc6wDN0dGHYFyqY=}
+jwt.access-token-expiration=${JWT_ACCESS_TOKEN_EXPIRATION:900000}
+jwt.refresh-token-expiration=${JWT_REFRESH_TOKEN_EXPIRATION:1209600000}
