--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,17 +3,16 @@ spring.application.name=devlog-api
 server.port=8080
 
 # ===================== DB Setting =====================
-# Docker ????? docker-compose?? ENV? ??
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:h2:mem:testdb}
-spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER:org.h2.Driver}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:sa}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # ===================== Redis Setting =====================
-spring.data.redis.host=${SPRING_REDIS_HOST:localhost}
-spring.data.redis.port=${SPRING_REDIS_PORT:6379}
+spring.data.redis.host=${SPRING_REDIS_HOST}
+spring.data.redis.port=${SPRING_REDIS_PORT}
 
 # ===================== JWT Setting =====================
 jwt.secret=${JWT_SECRET:YlCj8tnXzJmZ6cHdSKnFQHo0z9XtVc6wDN0dGHYFyqY=}
