--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.data.redis.port=${SPRING_REDIS_PORT}
 jwt.secret=${JWT_SECRET:YlCj8tnXzJmZ6cHdSKnFQHo0z9XtVc6wDN0dGHYFyqY=}
 jwt.access-token-expiration=${JWT_ACCESS_TOKEN_EXPIRATION:900000}
 jwt.refresh-token-expiration=${JWT_REFRESH_TOKEN_EXPIRATION:1209600000}
+
+# ====================== Mailing Setting ===================
+app.frontend.password-reset-url="www.my-app.com/api/members/password-reset"
