--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,16 +3,16 @@ spring.application.name=devlog-api
 server.port=8080
 
 # ===================== DB Setting =====================
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/devlog}
+spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER:com.mysql.cj.jdbc.Driver}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:sa}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # ===================== Redis Setting =====================
-spring.data.redis.host=${SPRING_REDIS_HOST}
-spring.data.redis.port=${SPRING_REDIS_PORT}
+spring.data.redis.host=${SPRING_REDIS_HOST:127.0.0.1}
+spring.data.redis.port=${SPRING_REDIS_PORT:6379}
 
 # ===================== JWT Setting =====================
 jwt.secret=${JWT_SECRET:YlCj8tnXzJmZ6cHdSKnFQHo0z9XtVc6wDN0dGHYFyqY=}
@@ -20,4 +20,4 @@ jwt.access-token-expiration=${JWT_ACCESS_TOKEN_EXPIRATION:900000}
 jwt.refresh-token-expiration=${JWT_REFRESH_TOKEN_EXPIRATION:1209600000}
 
 # ====================== Mailing Setting ===================
-app.frontend.password-reset-url="www.my-app.com/api/members/password-reset"
+app.frontend.password-reset-url=www.my-app.com/api/members/password-reset
