--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.application.name=devlog-api
 server.port=8080
 
 # ===================== DB Setting =====================
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/devlog}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3370/devlog}
 spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER:com.mysql.cj.jdbc.Driver}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:sa}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:devuser}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:devpass}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
